# wordle-terminal

rust/: Cargo.toml
rust/wordle/src/: main.rs
src/: Wordle.cpp
