[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
cursive = "*"
itertools = "0.12.1"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.197"
serde_json = "1.0.114"
